--- a/src/aura/ActionDetailsDynamicRow/ActionDetailsDynamicRow.cmp
+++ b/src/aura/ActionDetailsDynamicRow/ActionDetailsDynamicRow.cmp
@@ -22,7 +22,7 @@
     <aura:attribute name="isrequired" type="Boolean" default ="false"/>
     <!-- Disabled proerty-->
     <aura:attribute name = "isDisabled" type = "Boolean" default = "false"/>
-
+    
     <div class="slds-form-element__control slds-size_1-of-3">
         <aura:if isTrue="{!v.currentIndex == 0}">
             <label class="slds-form-element__label" for="input-01">{!v.fieldHeader}</label>
@@ -35,7 +35,7 @@
             <option value="">Select Field</option> 
             
             <aura:iteration items="{!v.wrapperTaskFields}" var="templateObj">               
-                <option value="{!templateObj.key}">{!templateObj.value}</option>
+                <option value="{!templateObj.key}">{!templateObj.key}</option>
             </aura:iteration>
         </lightning:select>
         
@@ -57,7 +57,7 @@
                     <option value="{!pickListValue}">{!pickListValue}</option>
                 </aura:iteration>
             </lightning:select>
-
+            
             
             <aura:set attribute="else">
                 <aura:if isTrue="{!v.dataType == 'Boolean'}">
@@ -73,14 +73,42 @@
                     </lightning:select>
                     
                     <aura:set attribute="else">
-                        <aura:if isTrue="{!v.dataType == 'Number'}">                            
-                            <lightning:input type="number" aura:id="formValidationId" 
-                                             name="numbers"
-                                             placeholder="Enter Numbers"
-                                             required="true"
-                                             value="{!v.taskObj.value}"
-                                             messageWhenRangeUnderflow="Enter Numbers"
-                                             disabled = "{!v.isDisabled}"/> 
+                        <aura:if isTrue="{!v.dataType == 'Number'}">
+                            <!--Added condition for priority field in numbers-->
+                            <aura:if isTrue="{!v.taskObj.key == 'Priority'}">
+                                <lightning:input type="number" aura:id="formValidationId" 
+                                                 name="numbers"
+                                                 value="{!v.taskObj.value}" required="true"
+                                                 placeholder = "Enter Priority"  pattern="[0-9]*" max="100" min="0"
+                                                 messageWhenPatternMismatch="Please Enter valid Priority (0-100)"
+                                                 messageWhenBadInput="Please Enter valid Priority (0-100)"
+                                                 messageWhenRangeOverflow="Priority Can't be above 100"
+                                                 messageWhenRangeUnderflow="Priority Can't be less than 0" 
+                                                 disabled = "{!v.isDisabled}"/>
+                                <!--Other fields(Not priority) in numbers -->
+                                <aura:set attribute="else">
+                                    <aura:if isTrue="{!v.taskObj.key == 'ringdna__Queue_Hold_Time__c'}">
+                                        <lightning:input type="number" aura:id="formValidationId" 
+                                                         name="numbers"
+                                                         placeholder="Enter Numbers"
+                                                         required="true"
+                                                         min="0"
+                                                         value="{!v.taskObj.value}"
+                                                         messageWhenRangeUnderflow="Enter a Valid Number (Greater than 0)"
+                                                         disabled = "{!v.isDisabled}"/> 
+                                        <aura:set attribute="else">
+                                            <lightning:input type="number" aura:id="formValidationId" 
+                                                             name="numbers"
+                                                             placeholder="Enter Numbers"
+                                                             required="true"
+                                                             value="{!v.taskObj.value}"
+                                                             messageWhenRangeUnderflow="Enter Valid Number"
+                                                             disabled = "{!v.isDisabled}"/> 
+                                        </aura:set>
+                                    </aura:if>
+                                </aura:set>
+                            </aura:if>                             
+                            
                             <aura:set attribute="else">
                                 <lightning:input aura:id="formValidationId" 
                                                  name="inputString" 
