--- a/src/aura/CadenceActionList/CadenceActionList.cmp
+++ b/src/aura/CadenceActionList/CadenceActionList.cmp
@@ -1,5 +1,7 @@
 <aura:component controller="CadenceActionListController" implements="flexipage:availableForRecordHome,flexipage:availableForAllPageTypes,force:hasRecordId,force:lightningQuickAction,force:appHostable" access="global"> 
     <!-- attributes -->
+    <aura:attribute name="moretabs" type="Aura.Component[]"/>
+
     <aura:attribute name="data" type="Object" default="" access="global"/>
     <aura:attribute name="columns" type="List" default=""/>
     <aura:attribute name="dataTableSchema" type="Object" default=""/>
@@ -40,8 +42,8 @@
             </div>
             <div class="slds-col slds-has-flexi-truncate slds-m-left_small">
                 <!-- HEADING AREA -->
-                <p class="slds-line-height_reset rdna-header-small">Cadence Actions</p>
-                <h1 class="slds-page-header__title slds-m-right_small slds-align-middle slds-truncate rdna-header-large"  title="All Cadence Actions">All Cadence Actions</h1>
+                <p class="slds-line-height_reset rdna-header-small slds-p-left_xx-small">Actions</p>
+                <h1 class="slds-page-header__title slds-m-right_small slds-align-middle slds-truncate rdna-header-large"  title="All Actions">All Actions</h1>
                 <!-- / HEADING AREA -->
             </div>
             
@@ -52,7 +54,7 @@
             </div>
             <aura:if isTrue="{!v.newActionEnable}">
                 <div class="slds-m-top_medium slds-align--absolute-center slds-float--right slds-m-right_small">
-                    <lightning:button class="rdna-button rdna-button-text slds-text-align_center" aura:id="newAction" label="New Cadence Action" onclick="{!c.newAction}"/>
+                    <lightning:button class="rdna-button rdna-button-text slds-text-align_center" aura:id="newAction" label="New Action" onclick="{!c.newAction}"/>
                 </div>    
                 <aura:set attribute="else">
                     <div class="slds-m-top_medium slds-align--absolute-center slds-m-right_small">
@@ -90,10 +92,10 @@
             <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
                 <div class="slds-modal__container">
                     <header class="slds-modal__header">
-                        <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Delete Cadence Action</h2>
+                        <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Delete Action</h2>
                     </header>
                     <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-                        <p>Are you sure you want to delete this Cadence Action? Once this action has been performed it can not be undone.</p>
+                        <p>Are you sure you want to delete this Action? Once this action has been performed it can not be undone.</p>
                     </div>
                     <footer class="slds-modal__footer">
                         <lightning:button label="Delete" variant="brand" onclick="{!c.deleteCadenceActions}"/>   
