--- a/src/aura/CadenceListView/CadenceListView.cmp
+++ b/src/aura/CadenceListView/CadenceListView.cmp
@@ -37,8 +37,8 @@
                 <img class = "rdna-logo" src="{!$Resource.cadence_icons + '/rdna-logo/rdna-logo@2x.png'}"/>
             </div>
             <div class="slds-col slds-has-flexi-truncate slds-m-left_small">
-                <p class="slds-line-height_reset rdna-header-small">Cadences</p>
-                <h1 class="slds-page-header__title slds-m-right_small slds-align-middle slds-truncate rdna-header-large"  title="All Cadence">All Cadences</h1>
+                <p class="slds-line-height_reset rdna-header-small slds-p-left_xx-small">Sequences</p>
+                <h1 class="slds-page-header__title slds-m-right_small slds-align-middle slds-truncate rdna-header-large"  title="All Sequence">All Sequences</h1>
             </div>
               
         </div>
@@ -48,11 +48,11 @@
         </div> 
             <aura:if isTrue="{!v.newActionEnable}">
                 <div>
-                	<lightning:button class="slds-p-left_large slds-m-top_large slds-m-right_medium slds-p-right_large rdna-button rdna-button-text" aura:id="newCadence" label="New Cadence" onclick="{!c.newCadence}"/>
+                	<lightning:button class="slds-p-left_large slds-m-top_large slds-m-right_medium slds-p-right_large rdna-button rdna-button-text" aura:id="newCadence" label="New Sequence" onclick="{!c.newCadence}"/>
 				</div>
                 <aura:set attribute="else">
                     <div>
-                    	<lightning:button class="slds-p-left_large slds-m-top_large slds-m-right_medium slds-p-right_large rdna-button rdna-button-text" aura:id="deleteActions" label="Delete Cadence" onclick="{!c.deleteCadActions}"/>
+                    	<lightning:button class="slds-p-left_large slds-m-top_large slds-m-right_medium slds-p-right_large rdna-button rdna-button-text" aura:id="deleteActions" label="Delete Sequence" onclick="{!c.deleteCadActions}"/>
                 	</div>
                 </aura:set>	
             </aura:if>  
@@ -86,10 +86,10 @@
             <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
                 <div class="slds-modal__container">
                     <header class="slds-modal__header">
-                        <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Delete Cadence</h2>
+                        <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Delete Sequence</h2>
                     </header>
                     <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-                        <p>Are you sure you want to delete this cadence? Once this has been performed no further cadence actions will be performed for all participants associated with this cadence.</p>
+                        <p>Are you sure you want to delete this sequence? Once this has been performed no further sequence actions will be performed for all participants associated with this sequence.</p>
                     </div>
                     <footer class="slds-modal__footer">
                         <lightning:button label="Delete" variant="brand" onclick="{!c.deleteCadenceActions}"/>   
