--- a/src/aura/CadenceTabset/CadenceTabset.cmp
+++ b/src/aura/CadenceTabset/CadenceTabset.cmp
@@ -34,8 +34,8 @@
                 <img class = "rdna-logo" src="{!$Resource.cadence_icons + '/rdna-logo/rdna-logo@2x.png'}"/>
             </div>
             <div class="slds-col slds-has-flexi-truncate slds-m-left_small">
-                <p class="slds-line-height_reset rdna-header-small">Cadences</p>
-                <h1 class="slds-page-header__title slds-m-right_small slds-align-middle slds-truncate rdna-header-large"  title="New Cadence Action">{!v.newCadence.Name}</h1>
+                <p class="slds-line-height_reset rdna-header-small">Sequences</p>
+                <h1 class="slds-page-header__title slds-m-right_small slds-align-middle slds-truncate rdna-header-large">{!v.newCadence.Name}</h1>
             </div>
             <aura:if isTrue="{!v.isActive}">
                 <div  class="slds-col slds-line-height_reset" style="color:red;">Activating</div>
@@ -62,7 +62,7 @@
         <!-- Header End--><!-- Body Start -->
         <div class="slds-m-top_medium">
             <lightning:tabset class="slds-p-top_x-large slds-p-left_xx-large rdna-backgroud" selectedTabId="{!v.tabToVisible}"> 
-                <lightning:tab class="slds topHeaderSmall" label="Cadence Details" id="1">
+                <lightning:tab class="slds topHeaderSmall" label="Sequence Details" id="1">
                     <c:CadenceDetails aura:id="cadDetails" pData="{!v.pData}" newCadence = "{!v.newCadence}" isDisabled = "{!v.isDisabled}" isShowParticipantsTable="true" toggleRows="{!v.toggleRows}" refreshParticipant="{!v.refreshParticipant}"/>
                 </lightning:tab> 
                 <lightning:tab class="slds topHeaderSmall" label="Entrance Criteria" id="2">
@@ -77,7 +77,7 @@
                                           criteriaType="Exit Criteria" criteriaSet="{!v.exitCriteriaSet}" 
                                           cadence="{!v.newCadence}" isViewMode="true"/>
                 </lightning:tab> 
-                <lightning:tab class="slds topHeaderSmall" label="Cadence Actions" id="4">
+                <lightning:tab class="slds topHeaderSmall" label="Sequence Actions" id="4">
                     <aura:if isTrue="{!not(empty(v.contactFieldList) || empty(v.leadFieldList))}">
                         <c:CadenceActions aura:id="createCadenceActionComponent" 
                                           entranceCriteriaSet="{!v.entranceCriteriaSet}" 
