--- a/src/pages/EditActionDetails.page
+++ b/src/pages/EditActionDetails.page
@@ -1,4 +1,4 @@
-<apex:page standardcontroller="Action__c" sidebar="false">
+<apex:page standardcontroller="Action__c" sidebar="false" tabStyle="Cadence_Actions_Classic__tab">
     <script src="/lightning/lightning.out.js"/>
     <apex:slds />
     <div id="myDivId3" />
